API endpoints + tests: delete  ingredients + steps
